--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "ritesh-ai",
   "version": "1.0.0",
-  "type": "module",
+  "private": true,
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "express": "^4.18.2"
   }
-
 }
