--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "ritesh-ai",
   "version": "1.0.0",
-  "private": true,
+  "description": "Ritesh AI Chat Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   }
 }
