--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "ritesh-ai",
   "version": "1.0.0",
-  "description": "Ritesh AI Chat App",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
