--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
