--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "ritesh-ai",
   "version": "1.0.0",
+  "private": true,
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.19.2"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
